--- a/.github/workflows/dummy.yml
+++ b/.github/workflows/dummy.yml
@@ -3,7 +3,7 @@ name: Sign APK
 on:
   push:
     branches:
-      - main # Adjust this to your main branch
+      - test # Adjust this to your main branch
 
 jobs:
   build:
