--- a/.github/workflows/dummy.yml
+++ b/.github/workflows/dummy.yml
@@ -14,24 +14,19 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up JDK 11
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v2
         with:
           java-version: '11'
           distribution: 'temurin'
-          cache: gradle
 
-      - name: Setup Android SDK
-        uses: android-actions/setup-android@v2
+      - name: Set up Android SDK
+        uses: actions/setup-android@v2
+        with:
+          sdk-platform: '30'
+          sdk-components: 'platform-tools,build-tools-30.0.3'
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-
-      - name: Build Debug APK
+      - name: Build APK
         run: ./gradlew assembleDebug
-
-      - name: Download and Install apksigner
-        run: |
-          sdkmanager "build-tools;30.0.3"
 
       - name: Decode Keystore
         run: |
@@ -40,14 +35,11 @@ jobs:
       - name: Sign Debug APK
         run: |
           # Assuming your .pk8 and .pem files are in the root directory
-          $ANDROID_SDK_ROOT/build-tools/30.0.3/apksigner sign --ks keystore.jks \
-                        --ks-key-alias ${{ secrets.KEY_ALIAS }} \
-                        --ks-pass pass:${{ secrets.KEY_PASSWORD }} \
-                        --key-pass pass:${{ secrets.KEY_STORE_PASSWORD }} \
-                        --in app/build/outputs/apk/debug/app-debug.apk \
-                        --out app/build/outputs/apk/debug/app-debug-signed.apk \
-                        --key-pk8 platform.pk8 \
-                        --key-pem platform.x509.pem
+          apksigner sign --key platform.pk8 --cert platform.x509.pem app/build/outputs/apk/debug/app-debug.apk \
+            --ks keystore.jks \
+            --ks-key-alias ${{ secrets.KEY_ALIAS }} \
+            --ks-pass pass:${{ secrets.KEY_STORE_PASSWORD }} \
+            --key-pass pass:${{ secrets.KEY_PASSWORD }}
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v2
