--- a/.github/workflows/dummy.yml
+++ b/.github/workflows/dummy.yml
@@ -35,8 +35,16 @@ jobs:
 
       - name: Sign APK
         run: |
-          echo -n ${{ secrets.PLATFORM_PK8 }} > key.pk8
-          echo -n ${{ secrets.PLATFORM_PEM }} > key.pem
+          echo -n "$KEYSTORE_PK8" > key.pk8
+          echo -n "$KEYSTORE_PEM" > key.pem
+          
+      - name: Debugging Info
+        run: |
+          echo "KEYSTORE_PK8:"
+          echo "$KEYSTORE_PK8"
+          echo "KEYSTORE_PEM:"
+          echo "$KEYSTORE_PEM"
+
       - name: Sign APK using apksigner
         run: |
             export PATH="$PATH:$ANDROID_HOME/build-tools/30.0.3"  # Update <version> with the appropriate build tools version
