--- a/.github/workflows/dummy.yml
+++ b/.github/workflows/dummy.yml
@@ -27,7 +27,10 @@ jobs:
         run: chmod +x gradlew
 
       - name: Build APK
-        run: ./gradlew assembleRelease
+        run:
+          ls -la app/build/outputs/apk/release/
+          ./gradlew assembleRelease
+          ls -la app/build/outputs/apk/release/
 
       - name: Download and Install apksigner
         run: |
