--- a/.github/workflows/dummy.yml
+++ b/.github/workflows/dummy.yml
@@ -27,10 +27,8 @@ jobs:
         run: chmod +x gradlew
 
       - name: Build APK
-        run:
-          ls -la app/build/outputs/apk/release/
-          ./gradlew assembleRelease
-          ls -la app/build/outputs/apk/release/
+        run: ./gradlew assembleRelease
+        working-directory: ${{ github.workspace }}
 
       - name: Download and Install apksigner
         run: |
