--- a/.github/workflows/dummy.yml
+++ b/.github/workflows/dummy.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Sign APK using apksigner
         run: |
             export PATH="$PATH:$ANDROID_HOME/build-tools/30.0.3"  # Update <version> with the appropriate build tools version
-            apksigner sign --key key.pk8 --cert key.pem --out app/build/outputs/apk/release/app-release-signed.apk app/build/outputs/apk/release/app-release-unsigned.apk
+            apksigner sign --key key.pk8 --cert key.pem --out app/build/outputs/apk/release/github-actions-demo_2.0.apk app/build/outputs/apk/release/github-actions-demo_2.0.apk
       
 
       - name: Upload Artifact
