--- a/.github/workflows/dummy.yml
+++ b/.github/workflows/dummy.yml
@@ -56,4 +56,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: signed-apk
-          path: app/build/outputs/apk/release/app-release-signed.apk
+          path: app/build/outputs/apk/release/github-actions-demo_2.0.apk
