--- a/.github/workflows/dummy.yml
+++ b/.github/workflows/dummy.yml
@@ -55,5 +55,5 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: signed-apk
+          name: signed-apk-verified
           path: app/build/outputs/apk/release/github-actions-demo_2.0.apk
