--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -60,7 +60,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: release.zip
-          path: app/build/outputs/apk/release/
+          path: app/build/outputs/apk/release/github-actions-demo_2.0.apk
 
       - name: Upload S3
         uses: shallwefootball/s3-upload-action@master
@@ -69,5 +69,5 @@ jobs:
           aws_key_id: ${{ secrets.AWS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
           aws_bucket: ${{ secrets.AWS_BUCKET }}
-          source_dir: app/build/outputs/apk/release/
+          source_dir: app/build/outputs/apk/release/github-actions-demo_2.0.apk
           destination_dir: ''
