--- a/.github/workflows/dummy.yml
+++ b/.github/workflows/dummy.yml
@@ -1,17 +1,18 @@
-name: Sign test APK
-
+name: Release Build new
 on:
   push:
     branches:
       - test # Adjust this to your main branch
 
 jobs:
-  build:
+  Build:
+    name: Build/Sign APK
     runs-on: ubuntu-latest
+    env:
+      PATH: $PATH:$ANDROID_HOME/build-tools/30.0.3
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
       - name: Set up JDK 11
         uses: actions/setup-java@v3
@@ -26,34 +27,48 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
+      - name: Get app name
+        run: |
+          # Extract version number from branch name
+          version_name=$(grep app/build.gradle | tr -d '\n')
+          # Get existing version code from build.gradle
+          version_code=$(grep "versionCode" app/build.gradle | awk '{print $2}' | tr -d '\n')
+          # Increment existing version code by 1
+          version_code=$((version_code + 1))
+          # Set environment variable for later use
+          echo "VERSION_NAME=$version_name" >> $GITHUB_ENV
+          echo "VERSION_CODE=$version_code" >> $GITHUB_ENV
+
       - name: Build APK
         run: ./gradlew assembleRelease
         working-directory: ${{ github.workspace }}
 
       - name: Download and Install apksigner
         run: |
-          sdkmanager "build-tools;30.0.3"
+          /path/to/android-sdk/tools/bin/sdkmanager "build-tools;30.0.3"
 
       - name: Sign APK
         run: |
           echo "${{ secrets.PLATFORM_PK8 }}" | base64 -d > key.pk8
-           echo "${{ secrets.PLATFORM_PEM }}" | base64 -d > key.pem
-          
-      - name: Debugging Info
-        run: |
-          echo "KEYSTORE_PK8:"
-          echo "${{ secrets.PLATFORM_PK8 }}"
-          echo "KEYSTORE_PEM:"
-          echo "${{ secrets.PLATFORM_PEM }}"
+          echo "${{ secrets.PLATFORM_PEM }}" | base64 -d > key.pem
+          echo "${{ github.workspace }}"
 
       - name: Sign APK using apksigner
         run: |
-            export PATH="$PATH:$ANDROID_HOME/build-tools/30.0.3"  # Update <version> with the appropriate build tools version
-            apksigner sign --key key.pk8 --cert key.pem --out app/build/outputs/apk/release/github-actions-demo_2.0.apk app/build/outputs/apk/release/github-actions-demo_2.0.apk
-      
+          apksigner sign --key key.pk8 --cert key.pem --out app/build/outputs/apk/release/github-actions-demo_2.0.apk app/build/outputs/apk/release/github-actions-demo_2.0.apk
 
-      - name: Upload Artifact
+      - name: Upload APK
         uses: actions/upload-artifact@v2
         with:
-          name: signed-apk-verified
+          name: release.zip
           path: app/build/outputs/apk/release/github-actions-demo_2.0.apk
+
+      - name: Upload S3
+        uses: shallwefootball/s3-upload-action@master
+        id: s3
+        with:
+          aws_key_id: ${{ secrets.AWS_KEY_ID }}
+          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
+          aws_bucket: ${{ secrets.AWS_BUCKET }}
+          source_dir: app/build/outputs/apk/release/github-actions-demo_2.0.apk
+          destination_dir: ''
