--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -70,5 +70,5 @@ jobs:
           aws_key_id: ${{ secrets.AWS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
           aws_bucket: ${{ secrets.AWS_BUCKET }}
-          source_dir: app/build/outputs/apk/release/github-actions-demo_2.0.apk
+          source_dir: app/build/outputs/apk/release/
           destination_dir: ''
